fix the cell overflow in tables

--- a/web/css/main.css
+++ b/web/css/main.css
@@ -19,6 +19,10 @@ body, td
   padding: 0;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 12px;
+  max-width: 100%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 /*  background: #F2ECF2;*/
 }
 
